<resources>
    <string name="app_name">AburriyoFirebase App</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registro</string>

    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="repeat_password">Repetir Contraseña</string>

    <string name="Preg_Registro">¿Todavía no tienes cuenta?</string>
    <string name="btn_reg_aqui">Regístrate aquí</string>

    <string name="Preg_Inicio">¿Ya tienes cuenta?</string>
    <string name="btn_login_aqui">Inicia sesión aquí</string>

    <string name="btn_register">Registrarse</string>
    <string name="btn_login">Iniciar Sesión</string>

    <string name="btn_login_pantalla">Iniciar Sesión</string>
    <string name="btn_register_pantalla">Registrarse</string>
    <string name="btn_OpenCV">OpenCV Pantalla</string>

    <string name="aburriyo_logo">AburriyoFirebase</string>

    <string name="bienvenido">¡Bienvenido!</string>
    <string name="correo">Correo</string>

    <string name="cv2Redirect">Abrir OpenCV</string>
    <string name="btn_logout">Cerrar Sesión</string>

</resources>