<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="292dp"
        android:layout_height="182dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/aburriyo_logo" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="192dp"
        android:layout_height="148dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:srcCompat="@drawable/_200px_opencv_logo_with_text_svg_version_svg" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="353dp"
        android:layout_height="146dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/IniciarSesiónPantalla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="irIniciar"
            android:text="@string/btn_login_pantalla" />

        <Button
            android:id="@+id/RegistrarPantalla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="irRegistrar"
            android:text="@string/btn_register_pantalla" />

        <Button
            android:id="@+id/OpenCVPantalla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_OpenCV" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>